Removed the standalone perft. Leorik now consists of three projects. The Leorik.Core library and a Leorik.Search and Leorik.Perft console app. The Perft speed actually got significantly slower through this update because the MoveGen.cs from core collects captures and quiet moves separately and looks up the target piece for capture. So the PerftMoveGen.cs was added to Perft as a reference to the old implementation and to preserve some (64M nps) of the old (68M nps) speed. The code in Leorik.Core includes incremental zobrist hash updates and incremental, PST based evaluation and was developed in the https://github.com/lithander/MinimalChessEngine/commits/leorik branch. Leorik.Search currently is hardcoded to do a minmax depth 4 search on a set of 300 positions. It does so at a speed of 38M nps and solves 79/300 positions in 10 minutes.

--- a/Leorik.Perft/Leorik.Perft.csproj
+++ b/Leorik.Perft/Leorik.Perft.csproj
@@ -11,6 +11,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Leorik.Core\Leorik.Core.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Update="qbb.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
