--- a/Leorik.Test/Leorik.Test.csproj
+++ b/Leorik.Test/Leorik.Test.csproj
@@ -1,6 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
@@ -8,6 +9,13 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Leorik.Core\Leorik.Core.csproj" />
+    <ProjectReference Include="..\Leorik.Search\Leorik.Search.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="wac.epd">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
