Added KillerMoves to IterativeSearchNext. Playing a killer before generating quiet moves can give a cutoff and prevent one from generating and playing any further quiet moves. Heavy WIP.

--- a/Leorik.Test/Leorik.Test.csproj
+++ b/Leorik.Test/Leorik.Test.csproj
@@ -13,6 +13,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="arasan21.epd">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="wac.epd">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
