Leorik does not implement any aggressive pruning. This should mean that it's capable of finding mates at the earliest possible search depth; the number of plys of the best mate sequence. I added a test to search positions that are known to be "mate in x" to confirm this is indeed true. Mate in x positions taken from https://github.com/TerjeKir/EngineTests/tree/master/testfiles

--- a/Leorik.Test/Leorik.Test.csproj
+++ b/Leorik.Test/Leorik.Test.csproj
@@ -13,7 +13,28 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="arasan21.epd">
+    <None Update="mate_in_1.epd">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="mate_in_2.epd">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="mate_in_3.epd">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="mate_in_4.epd">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="mate_in_5.epd">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="mate_in_6.epd">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="mate_in_7.epd">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="mate_in_8.epd">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Update="wac.epd">
