Phase values and material values can now be tuned at the same time. I had to simplify the phase calculation a little otherwise at some point further iterations of the phase minimizer were actually detrimental to the overall MSE.

--- a/Leorik.Tuning/Leorik.Tuning.csproj
+++ b/Leorik.Tuning/Leorik.Tuning.csproj
@@ -15,6 +15,9 @@
     <None Update="data\quiet-labeled.epd">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="data\quiet-labeled.v7.epd">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
