PawnStructure is now also using PSTs generated by the tuner instead of hand crafted terms. Mobility is now also using [piecetype, movecount]->score-bonus lookup tables generated directly by the tuner. Blocked pawns and pawns that are able to promote are temporarily not considered anymore. Instead Knight moves are now considered. All weights have a endgame and midgame value. Introduced Weights.cs where the tuned weights are copied to and than compiled into the executable and made accessible to the evaluation. Tuned new weights from scratch based on the combination of quiet-labeled.epd with the quiet-labeled.v7.epd (called quiet-labeled.v7plus) contains a total of 2.152.999 FENs. Using this larger set together with the old evaluation meant losing 10 Elo vs 2.2.6 and the above described changes achieve parity with 2.2.6.

--- a/Leorik.Tuning/Leorik.Tuning.csproj
+++ b/Leorik.Tuning/Leorik.Tuning.csproj
@@ -18,7 +18,16 @@
     <None Update="data\quiet-labeled.epd">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="data\quiet-labeled.merged.epd">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="data\quiet-labeled.v6.epd">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="data\quiet-labeled.v7.epd">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="data\quiet-labeled.v7plus.epd">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
