The ExtractData function now returns only quiet positions from the games. Instead of skipping violent positions the the positions are made quiet by playing all the captures and check evasions that Leorik's Qsearch also would play. So the positions the weights are trained on are similar to the leafs the engines actual search would evaluate. Two versions were tuned on 1.6M positions from 2.2.8b selfplay (RND25) and the one with Quiesce was significantly stronger.

--- a/Leorik.Tuning/Leorik.Tuning.csproj
+++ b/Leorik.Tuning/Leorik.Tuning.csproj
@@ -12,6 +12,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="data\leorik2X3_selfplay_startpos_5s_200ms_50mb_16112020.pgn">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="data\parser_test.pgn">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="data\quiet-extended.epd">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
@@ -28,6 +34,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Update="data\quiet-labeled.v7plus.epd">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="data\randomized-material-only-selfplay.pgn">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
