Improved the modification of SearchOptions through UCI setoption

--- a/Leorik.Test/Leorik.Test.csproj
+++ b/Leorik.Test/Leorik.Test.csproj
@@ -38,6 +38,9 @@
     <None Update="mate_in_8.epd">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="mini-wac.epd">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="see.epd">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
