--- a/Leorik.Test/Leorik.Test.csproj
+++ b/Leorik.Test/Leorik.Test.csproj
@@ -41,6 +41,9 @@
     <None Update="mini-wac.epd">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="otsv4-mea.epd">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="see.epd">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
