--- a/Leorik.Tuning/Leorik.Tuning.csproj
+++ b/Leorik.Tuning/Leorik.Tuning.csproj
@@ -8,6 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="System.Drawing.Common" Version="7.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Leorik.Core\Leorik.Core.csproj" />
   </ItemGroup>
 
