Replaced my HCE with NNUE eval. The architecture and network is borrowed from Stormphrax: https://github.com/Ciekce/Stormphrax/tree/79af7865bf39eae8c89f608f7bc325684a093ca6/src/eval (768->768)x2->1, ClippedReLU
The first naive implementation with for-loops and computing the eval from scratch ran with 50K nps and wasn't viable. So this implementation uses AVX2 and efficient updates and Leorik runs at ~2M nps

Preliminary results indicate a Elo difference of 304.7 +/- 26.9

--- a/Leorik.Engine/Leorik.Engine.csproj
+++ b/Leorik.Engine/Leorik.Engine.csproj
@@ -12,4 +12,10 @@
     <ProjectReference Include="..\Leorik.Search\Leorik.Search.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="net010.nnue">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
