This commit removes HCE from Leorik's source!
DataUtils & Tuning.Program capture the state that was used to export: DATA-Strict-0-0-5000-7.bullet.bin
This dataset was used to train 256HL-3B5083B8.nnue which beats 128HL-DATA-220124-v345-sparse-wide-shuffled.nnue:

Leorik-256HL vs Leorik-128HL: 2339 - 1740 - 3923  [0.537] 8002 (10s + 0.1)

WDL Scheduler  : constant 0.75
LR Scheduler   : start 0.001 gamma 0.2 drop every 10 epochs
End Epoch      : 21

It's interesting to note, that a lot of the available playout-sets were excluded as they seemed to hurt more than they helped. (See Program.cs) In fact getting this positive result took about a week of trial and error fiddling with the settings.

--- a/Leorik.Core/Leorik.Core.csproj
+++ b/Leorik.Core/Leorik.Core.csproj
@@ -6,4 +6,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Update="128HL-E5112D27.nnue">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
