-Engine now supports arbitrary hidden layer sizes -Scans current directory for nnue files and expects naming scheme to encode Layer1Size -fixed bugs in the tuner regarding the filtering and quiescing of positions -tuner program.cs reflects midway of an attempt to train a new nnue entirely from scratch (bootstrapped with a zero net and temperature)

--- a/Leorik.Core/Leorik.Core.csproj
+++ b/Leorik.Core/Leorik.Core.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -7,10 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Update="128HL-57716AF0.nnue">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Update="256HL-3B5083B8.nnue">
+    <None Update="256HL-1402M-Tmix-Q5-v14.nnue">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
