--- a/Leorik.Core/Leorik.Core.csproj
+++ b/Leorik.Core/Leorik.Core.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Update="256HL-1402M-Tmix-Q5-v14.nnue">
+    <None Update="640HL-S-4491M-Tmix-Q5-v18.nnue">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
