moved perft computation logic into a standalone Perft.cs class added 'perft' and 'hash' debug commands to Engine.cs

--- a/Leorik.Engine/Leorik.Engine.csproj
+++ b/Leorik.Engine/Leorik.Engine.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Leorik.Core\Leorik.Core.csproj" />
+    <ProjectReference Include="..\Leorik.Perft\Leorik.Perft.csproj" />
     <ProjectReference Include="..\Leorik.Search\Leorik.Search.csproj" />
   </ItemGroup>
 
