--- a/Leorik.Engine/Leorik.Engine.csproj
+++ b/Leorik.Engine/Leorik.Engine.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -9,7 +9,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Leorik.Core\Leorik.Core.csproj" />
-    <ProjectReference Include="..\Leorik.Perft\Leorik.Perft.csproj" />
     <ProjectReference Include="..\Leorik.Search\Leorik.Search.csproj" />
   </ItemGroup>
 
