added output buckets to NNUE evaluation where the bucket to be used is calculated based on the piece count of the position to be evaluated: bucket = (pieceCount - 2) / DivCeil(32, MaterialBuckets)
Number of buckets isn't hardcoded and needs to be encoded in the nnue file's name!

Tests done with a 384HL network trained with 5B positions to be sure lack of data isn't a factor

STC: 5s + 100ms
Score of Leorik-3.1.6 vs Leorik-3.1.5v20: 2854 - 2499 - 4647  [0.518] 10000
Elo difference: 12.3 +/- 5.0, LOS: 100.0 %, DrawRatio: 46.5 %

FRC: 5s + 100ms
Score of Leorik-3.1.6 vs Leorik-3.1.5v20: 3151 - 2633 - 4216  [0.526] 10000
Elo difference: 18.0 +/- 5.2, LOS: 100.0 %, DrawRatio: 42.2 %

--- a/Leorik.Core/Leorik.Core.csproj
+++ b/Leorik.Core/Leorik.Core.csproj
@@ -7,10 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Update="640HL-S-4491M-Tmix-Q5-v18.nnue">
+    <None Update="384HL-S-1KB-8MB-5061M-FRCv1.nnue">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Update="640HL-S-5288M-Tmix-Q5-v19.nnue">
+    <None Update="384HL-S-8-5061M-Tmix-Q5-FRCv1.nnue">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="640HL-S-4491M-Tmix-Q5-v18.nnue">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
